<resources>
    <string name="app_name">finalproject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="signIn">SignIn </string>
    <string name="signUp">SignUp </string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_pass">Enter your Password</string>
    <string name="re_enter_your_pass">Re-Enter your Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_field_of_study">Enter your field of study</string>
    <string name="write_a_simple_bio">write a simple Bio</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="no_pdf_yet">No Pdf Yet</string>

    <string-array name="pickHour">
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>24:00</item>
    </string-array>
</resources>